--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -89,4 +89,14 @@
     padding-left: 0;
     padding-right: 0;
   }
+  .aboutItem h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  .aboutItem p {
+    font-size: 18px;
+  }
+  
 }
