--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -246,4 +246,47 @@
     width: 100%;
     gap: 9px;
   }
+  .historyItem{
+    gap:5px
+
+  }
+  .historyItem img {
+    width: 20px;
+    margin-top: 20px;
+  }
+ 
+  .historyItemDetails h3 {
+    font-size: 21px;
+   font-weight: 600;
+  
+  }
+
+  .historyItemDetails p {
+    font-size: 14.5px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    margin-top: 4px;
+  }
+
+  .historyItemDetails ul {
+    margin-top: 6px;
+    font-size: 15px;
+    ;
+
+  }
+
+
+  .skillImageContainer {
+    width: 110px;
+    height: 110px;
+  }
+  .skillImageContainer img {
+    width: 73px;
+  }
+  
+  .skill p {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
 }
